fix: adjust navigation spacing

--- a/src/components/sbb-navigation/sbb-navigation.scss
+++ b/src/components/sbb-navigation/sbb-navigation.scss
@@ -8,7 +8,7 @@
   --sbb-navigation-animation-easing: ease-out;
   --sbb-navigation-padding-inline: var(--sbb-layout-base-offset-responsive);
   --sbb-navigation-padding-block-start: var(--sbb-spacing-responsive-l);
-  --sbb-navigation-padding-block-end: var(--sbb-spacing-fixed-6x);
+  --sbb-navigation-padding-block-end: var(--sbb-spacing-responsive-xl);
   --sbb-navigation-width: 100vw;
   --sbb-navigation-backdrop-color: transparent;
   --sbb-navigation-list-margin-block-start: var(--sbb-spacing-responsive-xxl);
