--- a/src/components/sbb-navigation-action/sbb-navigation-action.scss
+++ b/src/components/sbb-navigation-action/sbb-navigation-action.scss
@@ -1,6 +1,8 @@
+@use '../../global/styles' as sbb;
+
 // Default component properties, defined for :host. Properties which can not
 // travel the shadow boundary are defined through this mixin
-@include host-component-properties;
+@include sbb.host-component-properties;
 
 :host {
   cursor: pointer;
@@ -11,8 +13,8 @@
 }
 
 .sbb-navigation-action {
-  @include title-4;
-  @include buttonReset;
+  @include sbb.title-4;
+  @include sbb.buttonReset;
 
   text-decoration: none;
   display: flex;
@@ -23,11 +25,11 @@
   text-align: left;
 
   :host([size='m']) & {
-    @include text-s--bold;
+    @include sbb.text-s--bold;
   }
 
   :host([size='s']) & {
-    @include text-xxs--bold;
+    @include sbb.text-xxs--bold;
   }
 
   :host([active]) & {
@@ -35,12 +37,12 @@
   }
 
   &:focus-visible {
-    @include focusOutline;
+    @include sbb.focusOutline;
 
     border-radius: calc(var(--sbb-border-radius-4x) - var(--sbb-focus-outline-offset));
   }
 
-  @include hover-mq($hover: true) {
+  @include sbb.hover-mq($hover: true) {
     &:hover {
       cursor: pointer;
       color: var(--sbb-color-storm-default);
