refactor: rename all mixins to kebab-case
BREAKING CHANGE:
In order to standardize mixin names, all mixin names were renamed to kebab-case style.
E.g. `ifForcedColors` became `if-forced-colors`.

--- a/src/components/sbb-accordion-item/sbb-accordion-item.scss
+++ b/src/components/sbb-accordion-item/sbb-accordion-item.scss
@@ -55,7 +55,7 @@
 }
 
 .accordion-item__button {
-  @include sbb.buttonReset;
+  @include sbb.button-reset;
   @include sbb.text-m--regular;
 
   width: 100%;
@@ -161,7 +161,7 @@
 }
 
 // Forced Colors
-@include sbb.ifForcedColors {
+@include sbb.if-forced-colors {
   .accordion-item--open .accordion-item__button,
   .accordion-item:not(.accordion-item--disabled):hover,
   .accordion-item:not(.accordion-item--disabled):focus-within {
