--- a/src/components/sbb-pearl-chain-vertical-item/sbb-pearl-chain-vertical-item.scss
+++ b/src/components/sbb-pearl-chain-vertical-item/sbb-pearl-chain-vertical-item.scss
@@ -19,7 +19,7 @@
   background-color: transparent;
   z-index: 2;
 
-  @include sbb.ifForcedColors {
+  @include sbb.if-forced-colors {
     .pearl-chain--past & {
       border-color: GrayText;
     }
