--- a/src/components/sbb-timetable-occupancy/sbb-timetable-occupancy.scss
+++ b/src/components/sbb-timetable-occupancy/sbb-timetable-occupancy.scss
@@ -31,7 +31,7 @@
 }
 
 .occupancy__class--visually-hidden {
-  @include sbb.screenReaderOnly;
+  @include sbb.screen-reader-only;
 }
 
 .occupancy__icon {
