--- a/src/components/sbb-timetable-row-day-change/sbb-timetable-row-day-change.scss
+++ b/src/components/sbb-timetable-row-day-change/sbb-timetable-row-day-change.scss
@@ -14,5 +14,5 @@
 
 .day-change--visually-hidden,
 .day-change__text--visually-hidden {
-  @include sbb.screenReaderOnly;
+  @include sbb.screen-reader-only;
 }
