--- a/src/components/sbb-alert-group/sbb-alert-group.scss
+++ b/src/components/sbb-alert-group/sbb-alert-group.scss
@@ -17,11 +17,11 @@
 
 /* stylelint-disable-next-line plugin/stylelint-bem-namics */
 :host(:focus-visible:not(.sbb-alert-group-empty)) {
-  @include sbb.focusOutline;
+  @include sbb.focus-outline;
 
   border-radius: var(--sbb-alert-group-border-radius);
 }
 
 .sbb-alert-group__title {
-  @include sbb.screenReaderOnly;
+  @include sbb.screen-reader-only;
 }
