--- a/src/components/sbb-form-field/sbb-form-field.scss
+++ b/src/components/sbb-form-field/sbb-form-field.scss
@@ -55,7 +55,7 @@
   --sbb-form-field-prefix-color: var(--sbb-color-graphite-default);
   --sbb-form-field-text-color: var(--sbb-color-graphite-default);
 
-  @include sbb.ifForcedColors {
+  @include sbb.if-forced-colors {
     --sbb-form-field-label-color: GrayText;
     --sbb-form-field-prefix-color: GrayText;
     --sbb-form-field-text-color: GrayText;
@@ -76,7 +76,7 @@
   --sbb-form-field-border-color: var(--sbb-color-red125-default);
   --sbb-form-field-text-color: var(--sbb-color-red125-default);
 
-  @include sbb.ifForcedColors {
+  @include sbb.if-forced-colors {
     --sbb-form-field-border-color: LinkText;
     --sbb-form-field-text-color: LinkText;
   }
@@ -102,7 +102,7 @@
 .sbb-form-field__space-wrapper {
   display: flex;
   flex-direction: column;
-  @include sbb.zeroWidthSpace;
+  @include sbb.zero-width-space;
 }
 
 .sbb-form-field__wrapper {
@@ -124,7 +124,7 @@
 }
 
 .sbb-form-field__select-input-icon {
-  @include sbb.absoluteCenterY;
+  @include sbb.absolute-center-y;
 
   inset-inline-end: 0;
   position: absolute;
