--- a/src/components/sbb-menu-action/sbb-menu-action.scss
+++ b/src/components/sbb-menu-action/sbb-menu-action.scss
@@ -15,7 +15,7 @@
 }
 
 .sbb-menu-action {
-  @include sbb.buttonReset;
+  @include sbb.button-reset;
 
   text-decoration: none;
   display: block;
@@ -48,7 +48,7 @@
   .sbb-menu-action:focus-visible & {
     --sbb-focus-outline-color: var(--sbb-focus-outline-color-dark);
 
-    @include sbb.focusOutline;
+    @include sbb.focus-outline;
   }
 
   @include sbb.hover-mq($hover: true) {
