--- a/src/components/sbb-tab-title/sbb-tab-title.scss
+++ b/src/components/sbb-tab-title/sbb-tab-title.scss
@@ -40,7 +40,7 @@
 
   .sbb-tab-title__text {
     @include sbb.text-xs--bold;
-    @include sbb.fontSmoothing;
+    @include sbb.font-smoothing;
     @include sbb.ellipsis;
   }
 
@@ -63,7 +63,7 @@
     &::before {
       inset: calc(var(--sbb-border-width-2x) * -1);
 
-      @include sbb.ifForcedColors {
+      @include sbb.if-forced-colors {
         border-color: Highlight;
       }
     }
@@ -103,7 +103,7 @@
   ::slotted(sbb-tab-amount) {
     --sbb-amount-color-override: var(--sbb-color-platinum-default);
 
-    @include sbb.ifForcedColors {
+    @include sbb.if-forced-colors {
       --sbb-amount-color-override: GrayText;
     }
   }
@@ -112,7 +112,7 @@
     border-color: var(--sbb-color-milk-default);
     background-color: var(--sbb-color-milk-default);
 
-    @include sbb.ifForcedColors {
+    @include sbb.if-forced-colors {
       border-color: GrayText;
     }
   }
@@ -122,13 +122,13 @@
     content: '';
     inset: 50% var(--sbb-spacing-fixed-5x);
     border-block-end: var(--sbb-border-width-2x) solid var(--sbb-color-platinum-default);
-    @include sbb.absoluteCenterY;
-    @include sbb.ifForcedColors {
+    @include sbb.absolute-center-y;
+    @include sbb.if-forced-colors {
       border-color: GrayText;
     }
   }
 
-  @include sbb.ifForcedColors {
+  @include sbb.if-forced-colors {
     color: GrayText;
   }
 }
@@ -138,7 +138,7 @@
 
   .sbb-tab-title {
     &::before {
-      @include sbb.focusOutline;
+      @include sbb.focus-outline;
     }
   }
 }
