--- a/src/components/sbb-teaser/sbb-teaser.scss
+++ b/src/components/sbb-teaser/sbb-teaser.scss
@@ -23,13 +23,13 @@
 }
 
 .sbb-teaser {
-  @include sbb.zeroWidthSpace;
+  @include sbb.zero-width-space;
 
   display: flex;
   text-decoration: none;
 
   &:focus-visible {
-    @include sbb.focusOutline;
+    @include sbb.focus-outline;
   }
 }
 
@@ -68,12 +68,12 @@
 }
 
 .sbb-teaser__lead {
-  @include sbb.clampLines($lines: 2);
+  @include sbb.clamp-lines($lines: 2);
 }
 
 .sbb-teaser__description {
   @include sbb.text-s--regular;
-  @include sbb.clampLines($lines: 2);
+  @include sbb.clamp-lines($lines: 2);
 
   color: var(--sbb-teaser-description-color);
 }
@@ -83,5 +83,5 @@
 }
 
 .sbb-teaser__opens-in-new-window {
-  @include sbb.screenReaderOnly;
+  @include sbb.screen-reader-only;
 }
