--- a/src/components/sbb-timetable-button/sbb-timetable-button.scss
+++ b/src/components/sbb-timetable-button/sbb-timetable-button.scss
@@ -54,7 +54,7 @@ button[dir='rtl'] .button__chevron {
   margin-inline-end: var(--sbb-spacing-fixed-1x);
 
   @include sbb.mq($to: micro) {
-    @include sbb.screenReaderOnly;
+    @include sbb.screen-reader-only;
   }
 }
 
