--- a/src/components/sbb-timetable-row/sbb-timetable-row.scss
+++ b/src/components/sbb-timetable-row/sbb-timetable-row.scss
@@ -30,7 +30,7 @@
 }
 
 .sbb-screenreaderonly {
-  @include sbb.screenReaderOnly;
+  @include sbb.screen-reader-only;
 }
 
 .sbb-timetable__row--quay {
