--- a/src/components/sbb-timetable-transportation-walk/sbb-timetable-transportation-walk.scss
+++ b/src/components/sbb-timetable-transportation-walk/sbb-timetable-transportation-walk.scss
@@ -24,7 +24,7 @@
 }
 
 .walk__text--visually-hidden {
-  @include sbb.screenReaderOnly;
+  @include sbb.screen-reader-only;
 }
 
 .walk__icon {
@@ -54,7 +54,7 @@
   width: var(--walk-icon-width);
   transform: translateX(#{sbb.px-to-rem-build(-7)});
 
-  @include sbb.ifForcedColors {
+  @include sbb.if-forced-colors {
     fill: CanvasText;
   }
 }
