--- a/src/components/sbb-toggle-check/sbb-toggle-check.scss
+++ b/src/components/sbb-toggle-check/sbb-toggle-check.scss
@@ -21,7 +21,7 @@
   --sbb-toggle-check-flex-direction: row-reverse;
   --sbb-toggle-check-icon-opacity: 0;
 
-  @include sbb.ifForcedColors {
+  @include sbb.if-forced-colors {
     --sbb-toggle-check-circle-background: Canvas;
     --sbb-toggle-check-background: CanvasText;
   }
@@ -35,7 +35,7 @@
   );
   --sbb-toggle-check-icon-opacity: 1;
 
-  @include sbb.ifForcedColors {
+  @include sbb.if-forced-colors {
     --sbb-toggle-check-fill: Highlight;
     --sbb-toggle-check-background: Highlight;
   }
@@ -48,7 +48,7 @@
   --sbb-toggle-check-circle-background: var(--sbb-color-milk-default);
   --sbb-toggle-check-cursor: not-allowed;
 
-  @include sbb.ifForcedColors {
+  @include sbb.if-forced-colors {
     --sbb-toggle-check-fill: GrayText;
     --sbb-toggle-check-background: GrayText;
   }
@@ -60,7 +60,7 @@
 
 .sbb-toggle-check {
   // Avoids unwanted space displayed if no label text is set.
-  @include sbb.zeroWidthSpace;
+  @include sbb.zero-width-space;
 
   position: relative;
   display: flex;
@@ -70,7 +70,7 @@
 }
 
 input[type='checkbox'] {
-  @include sbb.invisibleContainerOverlay;
+  @include sbb.invisible-container-overlay;
 }
 
 .sbb-toggle-check__container {
@@ -99,13 +99,13 @@ input[type='checkbox'] {
   cursor: var(--sbb-toggle-check-cursor);
 
   input[type='checkbox']:focus-visible + .toggle-check__container & {
-    @include sbb.focusOutline;
+    @include sbb.focus-outline;
   }
 }
 
 .sbb-toggle-check__circle {
   @include sbb.shadow-level-5-hard;
-  @include sbb.absoluteCenterY;
+  @include sbb.absolute-center-y;
 
   width: var(--sbb-toggle-check-circle-diameter);
   height: var(--sbb-toggle-check-circle-diameter);
