--- a/src/global/styles/mixins/a11y.scss
+++ b/src/global/styles/mixins/a11y.scss
@@ -1,22 +1,22 @@
 // ----------------------------------------------------------------------------------------------------
 // A11y: MediaQueries & Other things
 // ----------------------------------------------------------------------------------------------------
-@mixin ifForcedColors {
+@mixin if-forced-colors {
   @media (forced-colors: active) {
     @content;
   }
 }
 
-@mixin focusOutline {
+@mixin focus-outline {
   outline-offset: var(--sbb-focus-outline-offset);
   outline: var(--sbb-focus-outline-color) solid var(--sbb-focus-outline-width);
 
-  @include ifForcedColors {
+  @include if-forced-colors {
     outline-color: Highlight;
   }
 }
 
-@mixin screenReaderOnly {
+@mixin screen-reader-only {
   border: 0;
   clip: rect(0 0 0 0);
   height: 1px;
@@ -28,6 +28,6 @@
   width: 1px;
 }
 
-@mixin scrollMarginBlockStart() {
+@mixin scroll-margin-block-start() {
   scroll-margin-block-start: var(--sbb-spacing-fixed-10x);
 }
