--- a/src/global/styles/mixins/buttons.scss
+++ b/src/global/styles/mixins/buttons.scss
@@ -2,7 +2,7 @@
 // Buttons Mixins
 // ----------------------------------------------------------------------------------------------------
 
-@mixin buttonReset {
+@mixin button-reset {
   -webkit-appearance: none;
   -moz-appearance: none;
   box-sizing: border-box;
