--- a/src/global/styles/mixins/helpers.scss
+++ b/src/global/styles/mixins/helpers.scss
@@ -9,27 +9,27 @@
   #{$property}: stretch;
 }
 
-@mixin absoluteCenterXY() {
+@mixin absolute-center-x-y() {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
-@mixin absoluteCenterX() {
+@mixin absolute-center-x() {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
 }
 
-@mixin absoluteCenterY() {
+@mixin absolute-center-y() {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
 }
 
 /** This mixin can be used to avoid spacing problems by inserting an invisible space as pseudo element. */
-@mixin zeroWidthSpace() {
+@mixin zero-width-space() {
   &::before {
     content: '\200B';
     user-select: none;
@@ -38,7 +38,7 @@
   }
 }
 
-@mixin invisibleContainerOverlay {
+@mixin invisible-container-overlay {
   position: absolute;
   opacity: 0;
   inset: 0;
