--- a/src/components/sbb-navigation-marker/sbb-navigation-marker.scss
+++ b/src/components/sbb-navigation-marker/sbb-navigation-marker.scss
@@ -38,7 +38,7 @@
       property: opacity, top;
     }
 
-    @include sbb.ifForcedColors {
+    @include sbb.if-forced-colors {
       background: CanvasText;
     }
   }
