--- a/src/components/sbb-navigation/sbb-navigation.scss
+++ b/src/components/sbb-navigation/sbb-navigation.scss
@@ -141,7 +141,7 @@
     animation-name: close;
   }
 
-  @include sbb.ifForcedColors {
+  @include sbb.if-forced-colors {
     outline: var(--sbb-border-width-1x) solid CanvasText;
   }
 }
